--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  width: 50%;
+  border: 1 solid gray;
+  padding: 12px;
+  border: 2 solid gray;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button{
+ color: #ffffff;
+ background-color: blue;
+ border-width: 0px;
+ border-radius: 10px;
+ height: 40px;
+ width: 70px;
+ 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 10px; 
+  width: 50%;
+}
+.list-style{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  margin-top: 12px;
+  width: 50%; 
+  padding: 12px;
+  
+}
+.heading{
+  text-align: center;
+  width: 50%;
+  margin-bottom: 12px;
+}
+.alert {
+  padding: 15px;
+  background-color: #f44336;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-bottom: 15px;
 }
