--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,39 @@
-*{
-  margin: 0;
-  padding: 0px;
-}
-
-input{
-  width: 50%;
-  border: 1 solid gray;
-  padding: 12px;
-  border: 2 solid gray;
-}
-.button{
- color: #ffffff;
- background-color: blue;
- border-width: 0px;
- border-radius: 10px;
- height: 40px;
- width: 70px;
- 
-}
 .container{
   display: flex;
-  justify-content: center;
-  gap: 10px; 
-  width: 50%;
-}
-.list-style{
-  display: flex;
-  justify-content:space-between;
+  gap: 10px;
   align-items: center;
-  margin-top: 12px;
-  width: 50%; 
-  padding: 12px;
-  
+  justify-content: center;
 }
-.heading{
+h1{
   text-align: center;
-  width: 50%;
-  margin-bottom: 12px;
 }
-.alert {
-  padding: 15px;
-  background-color: #f44336;
-  color: white;
-  margin-bottom: 15px;
+input{
+  width: 50%;
+  padding: 12px;
+  border-radius: 12px;
+  border: 2px solid gray;
+}
+.list-group{
+  display: flex;
+  justify-content: center;
+}
+.button{
+  height: 30px;
+}
+.para{
+  width: 50%;
+}
+.button{
+  background-color: blue;
+  color: #ffffff;
+  border-width: 0px;
+  border-radius: 10px;
+  height: 38px;
+  width: 70px;
+}
+
+.into-button{
+  border-radius: 10px;
+  width: 40px;
+  height: 26px;
 }
